--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,23 +19,27 @@ $dark:                            #444 !default;
 $ionicons-font-path:"../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import"../www/lib/ionic/scss/ionic";
-// @import"http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800)";
-
-@font-face {
-  font-family: "Ionicons";
-  src: url("../fonts/Open_Sans/OpenSans-Regular.ttf");
-  font-weight: normal;
-  font-style: normal; }
-p,h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 ,.title{
-  font-family:"Open Sans", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !important;
+@import"http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800)";
+// @font-face {
+//   font-family: "Ionicons";
+//   src: url("../fonts/Open_Sans/OpenSans-Regular.ttf");
+//   font-weight: normal;
+//   font-style: normal;
+// }
+p, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .title {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !important;
 }
-.title{
-  font-weight:300;
+.title {
+  font-weight: 300;
 }
 a {
   text-decoration: none;
 }
 
-.bar-header-shadow{
-  box-shadow: 0 1px 3px lighten(black,80%);
+.bar-header-shadow {
+  transition: box-shadow 0.5s;
+}
+
+.bar-header-shadow-active{
+  box-shadow: 0 1px 3px lighten(black, 80%);
 }
