增加search 与home 的逻辑

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -8917,4 +8917,16 @@ ion-nav-back-button {
 .search-blur {
   -webkit-filter: blur(2px); }
 
+.item-add-button {
+  position: absolute;
+  right: 0;
+  top: 0px;
+  height: 100px;
+  border-left: #dddddd solid 1px;
+  border-width: 0px 1px;
+  padding-top: 30px; }
+
+.search-item-simple {
+  padding-right: 34px; }
+
 /*# sourceMappingURL=ionic.app.css.map */
