修正 字体无法显示 bug

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,10 +21,10 @@ $ionicons-font-path:"../lib/ionic/fonts" !default;
 @import"../www/lib/ionic/scss/ionic";
 // @import"http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800)";
 @font-face {
-  font-family: "Ionicons";
+  font-family: "Open Sans";
   src: url("../fonts/Open_Sans/OpenSans-Regular.ttf");
-  font-weight: normal;
-  font-style: normal;
+  src: url("../fonts/Open_Sans/OpenSans-Light.ttf");
+
 }
 p, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .title {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !important;
