--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -8928,4 +8928,13 @@ ion-nav-back-button {
 .search-item-simple {
   padding-right: 34px; }
 
+.popup-menu-modal {
+  top: 40%;
+  right: 20%;
+  bottom: 40%;
+  left: 20%;
+  overflow: visible;
+  min-height: 0;
+  width: 60%; }
+
 /*# sourceMappingURL=ionic.app.css.map */
