--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -87,3 +87,8 @@ ion-nav-back-button {
 .process-bar.process-bar-end {
   transition: width 0.5s linear;
 }
+
+.full-image{
+  // border-radius: 50%;
+
+}
