--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -98,4 +98,11 @@ ion-nav-back-button {
   left: 0;
   opacity:0.5;
   transition: top 0.5s;
+  z-index: 2;
+}
+
+.flash-bar p{
+  text-align: center;
+  font-weight: 500;
+  opacity:1;
 }
