--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -92,7 +92,7 @@ ion-nav-back-button {
 
 .flash-bar{
   height: 30px;
-  background-color: lighten(red,20%);
+  background-color: lighten(#999,20%);
   position: absolute;
   overflow: hidden;
   left: 0;
@@ -105,4 +105,21 @@ ion-nav-back-button {
   text-align: center;
   font-weight: 500;
   opacity:1;
+}
+
+.img-convert{
+  width:80px;
+  height: 80px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.img-convert img{
+  display: block;
+  max-width:80px;
+  max-height: 80px;
 }
